# dbc-client

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  application.pro  dbclient.pro  setup.py
source/: empty.cpp  freedom_db.cpp  freedom_db.h  main.cpp  main_test.cpp  mainwindow.cpp  mainwindow.h  pybindings.cpp
source/_old_code/: mainwindow.cpp  mainwindow.h  p2p.cpp
source/core/: log.cpp  log.h
source/p2p/: p2p.cpp  p2p.h
tests/: basic_test.py  main.cpp
ui/: mainwindow.ui
